--- a/style.css
+++ b/style.css
@@ -27,9 +27,10 @@ h1 {
 
 p#relogio01 {
     position: fixed;
-    top: 0%;
-    right: 0%;
-    font-size: 21.6rem;
+    right: -0.7%;
+    top: 2%;
+    text-align: center;
+    font-size: 24.5rem;
     color: #0044ff;
     font-family: 'arial';
 }
@@ -40,7 +41,7 @@ p#relogio01 {
 #relogio2 {
     position: fixed;
     top: 80%;
-    right: 70%;
+    right: 74.8%;
     font-size: 6rem;
     color: #0044ff;
     font-family: 'arial';
@@ -49,7 +50,7 @@ p#relogio01 {
 p.fn {
     position: fixed;
     top: 78%;
-    right: 71%;
+    right: 76%;
     justify-content: space-around;
     font-size: 1.6rem;
     color: #0044ff;
@@ -62,7 +63,7 @@ p.fn {
 #relogio3 {
     position: fixed;
     top: 80%;
-    right: 38%;
+    right: 35%;
     justify-content: space-around;
     font-size: 6rem;
     color: #0044ff;
@@ -72,7 +73,7 @@ p.fn {
 p.am {
     position: fixed;
     top: 78%;
-    right: 44%;
+    right: 41.8%;
     justify-content: space-around;
     font-size: 1.6rem;
     color: #0044ff;
@@ -85,7 +86,7 @@ p.am {
 #relogio4 {
     position: fixed;
     top: 80%;
-    right: 7%;
+    right: 0%;
     font-size: 6rem;
     color: #0044ff;
     font-family: 'arial';
@@ -94,7 +95,7 @@ p.am {
 p.ac {
     position: fixed;
     top: 78%;
-    right: 16%;
+    right: 10%;
     justify-content: space-around;
     font-size: 1.6rem;
     color: #0044ff;
@@ -104,10 +105,10 @@ p.ac {
 
 /*ok teste dia mes e ano*/
 section {
-    position: fixed;
-    top: 53%;
-    right: 4%;
-    font-size: 4.0rem;
+
+    text-align: center;
+    padding-top: 25%;
+    font-size: 4.8rem;
     color: #0044ff;
     font-family: 'arial';
 }
