--- a/style.css
+++ b/style.css
@@ -105,9 +105,15 @@ p.ac {
 
 /*ok teste dia mes e ano*/
 section {
-
     text-align: center;
     padding-top: 25%;
+    font-size: 4.8rem;
+    color: #0044ff;
+    font-family: 'arial';
+}
+section {
+    text-align: center;
+    padding-top: 125px; /* Ou outro valor adequado */
     font-size: 4.8rem;
     color: #0044ff;
     font-family: 'arial';
